# Page-Analyzer

./: .gitignore  Dockerfile  Makefile  README.md  build.sh  database.sql  docker-compose.yml  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: __init__.py  app.py  db.py  formatters.py  parser.py
page_analyzer/templates/: 404.html  index.html  layout.html  url.html  urls.html
